--- a/love-heart.html
+++ b/love-heart.html
@@ -6,15 +6,15 @@
     @host {
       display: inline-block;
       position: relative;
-      top: .2em;
+      top: 0.2em;
       font-size: 1.4em;
       color: rgb(201,70,59);
-      -webkit-transform: scale(.9);
-      -moz-transform: scale(.9);
-      transform: scale(.9);
-      -webkit-animation: love .5s infinite linear alternate-reverse;
-      -moz-animation: love .5s infinite linear alternate-reverse;
-      animation: love .5s infinite linear alternate-reverse;
+      -webkit-transform: scale(0.9);
+      -moz-transform: scale(0.9);
+      transform: scale(0.9);
+      -webkit-animation: love 0.5s infinite linear alternate-reverse;
+      -moz-animation: love 0.5s infinite linear alternate-reverse;
+      animation: love 0.5s infinite linear alternate-reverse;
     }
 
     @-webkit-keyframes love {
