fix(demo): add platform.js after polymer update into ~0.1.x
Include platform.js after polymer update into ~0.1.x, which breaks old html import.
Also reference local bower components in the demo.

Closes #2

--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
   <title>&lt;love-heart&gt;</title>
 
   <!-- Importing Web Component's Polyfill -->
-  <script src="bower_components/polymer/polymer.min.js"></script>
   <script>
     if (!window.Polymer) {
-      var script = document.createElement('script');
-      script.src = 'http://www.polymer-project.org/polymer.min.js?20131025';
-      document.head.appendChild(script);
+      var platformScript = document.createElement('script');
+      platformScript.src = 'bower_components/platform/platform.js';
+      var polymerScript = document.createElement('script');
+      polymerScript.src = 'bower_components/polymer/polymer.js';
+      document.head.appendChild(platformScript).appendChild(polymerScript);
     }
   </script>
 
