chore(demo): update to polymer 0.3.1

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <title>&lt;love-heart&gt;</title>
 
   <!-- Importing Web Component's Polyfill -->
-  <script src="//cdnjs.cloudflare.com/ajax/libs/polymer/0.1.4/platform.js"></script>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/polymer/0.1.4/polymer.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/polymer/0.3.0/platform.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/polymer/0.3.0/polymer.js"></script>
 
   <!-- Importing Custom Elements -->
   <link rel="import" href="love-heart.html">
@@ -136,7 +136,7 @@
     <h3 class="text-left">Default element:</h3>
 
     <div class="line">
-    <p>Made with <love-heart></love-heart> by me</p>
+    <p>Made with <love-heart>love</love-heart> by me</p>
     <p class="code code-html">
       Made with <span class="code-vial">&lt;love-heart&gt;&lt;/love-heart&gt;</span> by me
     </p>
@@ -145,28 +145,28 @@
     <h3 class="text-left">Apply your own CSS:</h3>
 
     <div class="line">
-    <p>Made with <love-heart class="blue"></love-heart> by me</p>
+    <p>Made with <love-heart class="blue">love</love-heart> by me</p>
     <p class="code code-html">
       Made with <span class="code-vial">&lt;love-heart <span class="code-yellow">class="blue"</span> &gt;&lt;/love-heart&gt;</span> by me
     </p>
     </div>
 
     <div class="line">
-    <p>Made with <love-heart class="yellow"></love-heart> by me</p>
+    <p>Made with <love-heart class="yellow">love</love-heart> by me</p>
     <p class="code code-html">
       Made with <span class="code-vial">&lt;love-heart <span class="code-yellow">class="yellow"</span> &gt;&lt;/love-heart&gt;</span> by me
     </p>
     </div>
 
     <div class="line">
-    <p>Made with <love-heart class="big"></love-heart> by me</p>
+    <p>Made with <love-heart class="big">love</love-heart> by me</p>
     <p class="code code-html">
       Made with <span class="code-vial">&lt;love-heart <span class="code-yellow">class="big"</span> &gt;&lt;/love-heart&gt;</span> by me
     </p>
     </div>
 
     <div class="line">
-    <p>Made with <love-heart class="huge"></love-heart> by me</p>
+    <p>Made with <love-heart class="huge">love</love-heart> by me</p>
     <p class="code code-html">
       Made with <span class="code-vial">&lt;love-heart <span class="code-yellow">class="huge"</span> &gt;&lt;/love-heart&gt;</span> by me
     </p>
@@ -174,8 +174,8 @@
   </div>
 
   <footer>
-    <p>Made with <love-heart class="white"></love-heart> by <a href="http://janantala.com">Jan Antala</a></p>
-    <p>2013 Licensed under <a href="http://opensource.org/licenses/MIT">MIT</a></p>
+    <p>Made with <love-heart class="white">love</love-heart> by <a href="http://janantala.com">Jan Antala</a></p>
+    <p>2014 Licensed under <a href="http://opensource.org/licenses/MIT">MIT</a></p>
   </footer>
 </body>
 </html>
